# auther

./: .gitignore  Cargo.toml  LICENSE  compose.yaml  db_up.sh
migrations/: 20250923114445_create_users_table.sql
src/: db.rs  main.rs
src/api/: login.rs  mod.rs  profile.rs  refresh.rs  register.rs  router.rs
src/db/: client.rs  error.rs
src/model/: error.rs  jwt.rs  mod.rs  user.rs
