[package]
name = "jwt_try"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
uuid = { version = "1.18.1", features = ["serde"] }
axum = "0.8.4"
axum-jwt-auth = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.226", features = ["derive"] }
# sqlx = { version = "0.8.6", features = [
#     "postgres",
#     "runtime-tokio-rustls",
#     "macros",
# ] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",                 # <-- Add this
    "chrono",               # <-- Add this, as TIMESTAMPTZ maps to chrono::DateTime<Utc>
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
